# ausawards

be/: Cargo.toml
be/resources/: config.json
be/src/: main.rs  manager.rs
be/src/converters/: award.rs  mod.rs  user.rs
be/src/domain/: auth.rs  config.rs  mod.rs
be/src/dto/: auth.rs  award.rs  error.rs  mod.rs  users.rs
be/src/errors/: authentication.rs  authorization.rs  mod.rs  validation.rs
be/src/filters/: auth.rs  mod.rs
be/src/handlers/: error.rs
be/src/model/: award.rs  mod.rs  role.rs  session.rs  user.rs
be/src/repositories/: award.rs  common.rs  mod.rs  role.rs  session.rs  users.rs
be/src/routes/: health.rs  mod.rs  session.rs
be/src/routes/award/: create.rs  mod.rs  update.rs
be/src/routes/users/: create.rs  mod.rs
be/src/services/: award.rs  config.rs  mod.rs
be/src/services/users/: hash.rs  mod.rs  roles.rs  service.rs  session.rs  token.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/args/: mod.rs  parser.rs
cli/src/commands/: command.rs  healthcheck.rs  mod.rs  not_found.rs
cli/src/domain/: config.rs
scripts/: package-lock.json  package.json  roles.js  utils.js
