[package]
name = "ausawards-be"
version = "0.1.0"
authors = ["aaron"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "1.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
pwhash = "0.3"
mongodb = "1.1.1"
bson = "1.1.0"
async-trait = "0.1.41"
chrono = { version = "0.4.0", features = ["serde"] }
rand = "0.7.3"
jsonwebtoken = "7.2.0"
